--- a/assets/css/components/_jumbotron.scss
+++ b/assets/css/components/_jumbotron.scss
@@ -61,7 +61,7 @@
     }
 
     .right {
-        .featured-image {
+        .jumbo-image {
             display: flex;
             align-items: center;
             justify-content: center;
