--- a/assets/css/base/_custom.scss
+++ b/assets/css/base/_custom.scss
@@ -7,7 +7,7 @@ $warning: #009900;
 $danger: red;
 
 
-@import "../node_modules/bootstrap/scss/bootstrap";
+@import "../../node_modules/bootstrap/scss/bootstrap";
 
 
 
