--- a/assets/css/components/_contact.scss
+++ b/assets/css/components/_contact.scss
@@ -6,7 +6,7 @@ Styling for Contact
 
 .container-fluid.contact {
     width: 100%;
-    padding-top: 10vh;
+    padding-top: 0;
     padding-bottom: 10vh;
     background-color: #f2f2f2;
 }
