--- a/assets/css/components/_post.scss
+++ b/assets/css/components/_post.scss
@@ -1,46 +1,25 @@
-article {
-
-    &#post-1 {
-
-        .row {
-            margin-bottom: 1.5rem;
-
-        }
-
-        .photo-row {
-            .col-md-6 {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                height: 400px;
-            }
-        }
-
-        img {
-            border-radius: $border-radius;
-            height: 80%;
-            width: auto;
-            max-width: 100%;
-            box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, .8);
-            transition: 1s;
-
-            &:hover {
-                transform: scale(1.2);
-            }
-
-        }
-
-    }
-
-
-}
-
 .post {
 
     animation: fadeIn;
     animation-duration: 3s;
     display: flex;
     flex-direction: column;
+
+    .entry-title {
+        display: none;
+    }
+
+    .featured-image {
+        display: flex;
+        justify-content: center;
+
+        img {
+            width: 70%;
+            margin-bottom: 3rem;
+            box-shadow: 0 0 1rem rgba(black, .8);
+            border-radius: $border-radius;
+        }
+    }
 
     .post-text {
         background-color: rgba(#fff, .85);
@@ -49,11 +28,6 @@ article {
         width: 90%;
         margin: 0 auto;
 
-        .container {
-            max-width: 1200px;
-
-        }
-
         h1,
         h2,
         h3,
@@ -61,344 +35,177 @@ article {
         h5,
         h6,
         p {
-            width: 100%;
             max-width: 1000px;
             margin: 1rem auto;
-
-        }
-
-        p {
-            text-align: left;
-        }
-
-        h3,
-        h4,
-        h5 {
-            font-weight: 600;
-        }
-
-        h3.post-title {
-            font-size: 2.5rem;
-            font-weight: 600;
-            text-align: center;
-            margin-bottom: 2rem;
-        }
-
-        blockquote {
-            width: 80%;
-            max-width: 800px;
-            margin: 2rem auto;
-            padding-left: 2rem;
-            border-left: .5rem solid rgba($primary, .6);
-            border-radius: 8px;
-            font-style: italic;
-        }
-
-    }
-
-}
-
-
-#post-1 {
-
-    p img {
-        display: block;
-        margin: 0 auto;
-
-        max-width: 100%;
-        height: auto;
-    }
-
-
-}
-
-
-#post-757 {
-
-    .container {
-        max-width: 1000px;
-
-        img {
-            width: 20%;
-            height: auto;
-            margin-bottom: 2rem;
-            float: left;
-            margin-right: 1.5rem;
-
-        }
-
-        img+p+h5 {
-            clear: both;
-            float: none;
-        }
-
-    }
-
-
-}
-
-#post-1299 {
-
-    p {
-        img {
-            float: left;
-            margin-bottom: 2rem;
-            margin-right: 2rem;
         }
     }
 
-    h5 {
-        clear: both;
-        float: none;
+    padding: 4rem 0;
+
+
+
+    .portfolio-items {
+        display: flex;
+        flex-wrap: wrap;
+        margin: 0;
+        padding: 3rem 0rem 0rem 0rem;
+        animation: fadeIn;
+        animation-duration: 4s;
+
+        .col-lg-6 {
+            padding: .1rem;
+        }
     }
 
-    table {
-        margin-left: 10%;
+    .display-3 {
+        color: $white;
     }
 
-
-}
-
-#post-883 {
-
-    .entry-content>img:nth-child(1) {
-        display: block;
-        margin: 2rem auto;
-    }
-
-
-    >div.container {
-        max-width: 1000px;
-    }
-
-    >div.container>img {
-        width: 70%;
-        display: block;
-        margin: 2rem auto;
-        height: auto;
-        max-width: 700px;
-        float: none;
-        clear: both;
-    }
-
-    >div.container>img+p {
-        clear: both;
-        float: none;
-    }
-
-
-
-    #diff-table th,
-    #diff-table td {
-        padding: 1rem 0 1rem 1rem !important;
-        width: 25%;
-    }
-
-    #training-table>tbody>tr:nth-child(1)>th {
-        border-right: none;
-    }
-
-    #diff-table tr td:nth-child(2) {
-        border-left: 2px solid black;
-    }
-
-    .row>h4 {
+    .lead {
+        color: $white;
         margin-top: 2rem;
+    }
+
+    .mobilePresent {
+        color: $white;
+        font-weight: 700;
         text-align: center;
+        margin-top: 2rem;
+
+        display: none;
+
+        @include media-breakpoint-down(lg) {
+            display: block;
+        }
     }
 
-    #diff-table,
-    #training-table {
-        margin: 1rem 0 !important;
-        max-width: 995px !important;
+    .largePresent {
+        color: $white;
+        font-weight: 700;
+        text-align: center;
+        margin-top: 2rem;
+
+        display: block;
+
+        @include media-breakpoint-down(lg) {
+            display: none;
+        }
     }
 
-    #training-table th,
-    #training-table td {
-        width: 30%;
-    }
 
-    #training-table>tbody>tr:nth-child(1),
-    #training-table>tbody>tr:nth-child(8),
-    #training-table>tbody>tr:nth-child(15) {
-        padding-top: 2rem !important;
-        border-top: 2px solid black;
-        margin-top: 2rem !important;
-    }
+    button {
+        text-transform: capitalize;
+        margin-bottom: 2rem;
+        margin-right: 1rem;
 
-    #training-table>tbody>tr:nth-child(2),
-    #training-table>tbody>tr:nth-child(9),
-    #training-table>tbody>tr:nth-child(16) {
-        padding-bottom: 2rem !important;
-        border-bottom: 2px solid black;
+        // For photo gallery effects - ignore buttons
+        display: none;
     }
-
 
 }
 
-#post-808 {
+.portfolio-box {
+    position: relative;
+    height: 40vh;
+    overflow: hidden;
+    margin: 0rem;
+    border-radius: 8px;
+    box-shadow: 0px 0px 3rem rgba($primary, 1);
 
-    .entry-content>p:nth-child(24),
-    .entry-content>p:nth-child(12) {
+    @media (max-width: 992px) {
 
-        a {
-            display: flex;
-            align-items: center;
-            justify-content: flex-start;
+        margin-left: 0;
+    }
 
-            img {
-                width: 70%;
-                height: auto;
-                box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, .8);
-                transition: 1s;
-                margin-top: 2rem;
-                margin-bottom: 2rem;
-                border-radius: $border-radius;
+    img {
+        min-width: 100%;
+        min-height: 100%;
+    }
 
-                &:hover {
-                    transform: scale(1.05);
+    .portfolio-info {
+        background-color: rgba($gray-100, 0.6);
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        opacity: 0;
+        visibility: hidden;
+
+        .caption {
+            text-align: center;
+            color: $primary;
+            @include absoluteCenter;
+
+            h4 {
+                display: block;
+
+                font-family: "Alegreya", sans-serif;
+                font-size: 1.5rem;
+                font-weight: 700;
+
+                @include media-breakpoint-down(md) {
+                    font-size: 1rem;
+                    font-weight: 400;
                 }
             }
 
+            p {
+                font-size: 1rem;
+
+                @include media-breakpoint-down(md) {
+                    font-size: 0.8rem;
+                    font-weight: 300;
+                }
+            }
+
+            // This is the 'Display in Gallery' button
+            // Styling can remain the same for portfolio but the
+            // component should render 'visit online' for a portfolio
+            // item.
+            a {
+                display: block;
+                margin: 0 auto;
+                color: $primary;
+                font-weight: 500;
+                text-decoration: none;
+                background-color: transparent;
+                background-repeat: no-repeat;
+                border: none;
+                cursor: pointer;
+                overflow: hidden;
+                outline: none;
+                border-radius: 8px;
+
+                padding: 0.5rem;
+                transition: 1s;
+
+                &:hover {
+
+                    text-decoration: none;
+                    font-weight: 800;
+                    font-size: 110%;
+                    color: blue;
+
+                }
+            }
         }
-
     }
 
+    &:hover {
+        box-shadow: 10px 10px 10px rgba($primary, 0.8);
 
-    .entry-content>p:nth-child(22)>a:nth-child(1),
-    .entry-content>p:nth-child(15)>a:nth-child(1) {
-        float: left;
-        margin-right: 1rem;
-        margin-bottom: 1rem;
-    }
-
-    >div.container>p:nth-child(12)>a>img {
-        max-width: 60%;
-        clear: both;
-        float: none;
-        display: block;
-        margin: 2rem auto;
-        height: auto;
-    }
-
-
-    >div.container>p:nth-child(22),
-    >div.container>p:nth-child(15) {
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-start;
-    }
-
-    >div.container>p:nth-child(22) img,
-    >div.container>p:nth-child(15) img {
-        height: 150px;
-        margin-right: 2rem;
-        width: auto;
-    }
-
-    >div.container>p:nth-child(24)>a>img {
-        display: block;
-        width: 60%;
-        margin: 1.5rem auto;
-    }
-
-    >div.container>ul {
-        display: block;
-        margin-left: 10%;
-    }
-
-
-
-}
-
-#post-1120 {
-
-    .entry-content>p:nth-child(6)>img:nth-child(1),
-    .entry-content>p:nth-child(3)>img:nth-child(1) {
-        float: left;
-        margin-right: 1rem;
-        margin-bottom: 1rem;
-        border-radius: $border-radius;
-        box-shadow: 0rem 0rem .5rem rgba(0, 0, 0, .8);
-    }
-
-    .entry-content>a:nth-child(16)>img:nth-child(1),
-    .entry-content>a:nth-child(20)>img:nth-child(1),
-    .entry-content>a:nth-child(23)>img:nth-child(1),
-    .entry-content>a:nth-child(26)>img:nth-child(1) {
-        border-radius: $border-radius;
-        height: auto;
-        width: 80%;
-        max-width: 100%;
-        box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, .8);
-        transition: 1s;
-        margin-bottom: 2rem;
-
-        &:hover {
-            transform: scale(1.05);
-        }
-
-    }
-}
-
-#post-310 {
-    .entry-content>p:nth-child(6)>a:nth-child(1) {
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-bottom: 2rem;
-    }
-
-
-}
-
-#post-673 {
-    .entry-content>p:nth-child(18)>a:nth-child(1) {
-        float: left;
-        margin-right: 1rem;
-        margin-bottom: 1rem;
-        box-shadow: .5rem .5rem .5rem rgba(0, 0, 0, .5);
-        pointer-events: none;
-    }
-}
-
-#post-495 {
-    .entry-content>p:nth-child(6)>iframe:nth-child(1) {
-        width: 100%;
-        height: 40vw;
-    }
-
-
-    .wp-block-image {
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-
-        figure.aligncenter {
-            width: 300px;
-            margin: 0 auto 0 0;
-        }
-
-    }
-
-    img[class^="wp-image-"] {
-
-
-        &.aligncenter {
-            margin-left: 0rem !important;
-        }
-
-        border-radius: $border-radius;
-        margin-bottom: 2rem;
-        margin-left: 0rem;
-        box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, .8);
-        transition: 1s;
-
-        &:hover {
+        img {
             transform: scale(1.5);
-            box-shadow: 0 0 2rem rgba($dark, .9);
+            @include transitionProperty;
+        }
+
+        .portfolio-info {
+            opacity: 1;
+            visibility: visible;
+            @include transitionProperty;
+
+
         }
     }
-
 }
