--- a/assets/css/components/_page-banner.scss
+++ b/assets/css/components/_page-banner.scss
@@ -7,11 +7,11 @@
 
     h1 {
         font-size: 4rem;
-        text-shadow: 0.2rem 0.2rem 0rem $black;
+        text-shadow: 0.2rem 0.2rem .5rem $black;
     }
 
     h3 {
-        text-shadow: 0.2rem 0.2rem 0rem $black;
+        text-shadow: 0.1rem 0.1rem .2rem $black;
 
     }
 
