--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -17,10 +17,12 @@
 @import "components/page";
 @import "components/contact";
 @import "components/carousel";
+@import "components/jumbo-carousel";
 @import "components/posts";
-@import "components/martin";
+@import "components/home";
 @import "components/about";
 @import "components/media";
 @import "components/search";
 @import "components/login";
 @import "components/post";
+@import "components/glightbox";
