--- a/assets/css/components/_featured-posts.scss
+++ b/assets/css/components/_featured-posts.scss
@@ -1,19 +1,23 @@
 div.featured-posts {
-
-    padding: 6rem 3rem 6rem 3rem;
+    padding: 2rem 3rem 2rem 3rem;
     background-color: #fff;
 
     h2 {
+        margin-top: 2rem;
         margin-bottom: 3rem;
         color: $primary;
         text-shadow: .1rem .1rem .1rem rgba($black, .7);
-        font-size: 4rem;
+        font-size: 3rem;
     }
 
     div.card {
 
         border-color: transparent;
         border-right: 1px solid rgba($black, .1);
+
+        @include media-breakpoint-down(lg) {
+            border-right: none;
+        }
 
         .card-title {
             margin-bottom: 1.5rem;
@@ -36,6 +40,7 @@ div.featured-posts {
             justify-content: center;
             position: relative;
             margin-bottom: 1rem;
+            border-radius: $border-radius;
 
             img {
                 height: 35rem;
@@ -43,10 +48,11 @@ div.featured-posts {
                 position: absolute;
                 top: 0;
                 transition: 1s;
+                transform: translateY(-10%);
             }
 
             img:hover {
-                transform: scale(1.1);
+                transform: scale(1.1) translateY(-10%);
             }
         }
 
@@ -60,6 +66,6 @@ div.featured-posts {
 
 }
 
-#featured-posts div:nth-child(3) {
+#featured-posts div:nth-child(4) {
     border-right: none;
 }
