--- a/assets/css/components/_post.scss
+++ b/assets/css/components/_post.scss
@@ -15,6 +15,7 @@
 
         img {
             width: 70%;
+            max-width: 600px;
             margin-bottom: 3rem;
             box-shadow: 0 0 1rem rgba(black, .8);
             border-radius: $border-radius;
@@ -110,7 +111,7 @@
     overflow: hidden;
     margin: 0rem;
     border-radius: 8px;
-    box-shadow: 0px 0px 3rem rgba($primary, 1);
+    box-shadow: 0px 0px 2rem rgba($black, .8);
 
     @media (max-width: 992px) {
 
@@ -133,6 +134,8 @@
         visibility: hidden;
 
         .caption {
+            width: 100%;
+            height: 100%;
             text-align: center;
             color: $primary;
             @include absoluteCenter;
@@ -152,6 +155,8 @@
 
             p {
                 font-size: 1rem;
+                width: 100%;
+                height: 100%;
 
                 @include media-breakpoint-down(md) {
                     font-size: 0.8rem;
@@ -165,6 +170,8 @@
             // item.
             a {
                 display: block;
+                width: 100%;
+                height: 100%;
                 margin: 0 auto;
                 color: $primary;
                 font-weight: 500;
@@ -201,11 +208,22 @@
         }
 
         .portfolio-info {
-            opacity: 1;
+            opacity: .5;
             visibility: visible;
             @include transitionProperty;
 
 
         }
+    }
+}
+
+.gslide-inner-content,
+.ginner-container,
+.gslide-media.gslide-image {
+    width: 100vw;
+
+    img {
+        width: 80%;
+        height: auto;
     }
 }
