--- a/assets/css/components/_contact.scss
+++ b/assets/css/components/_contact.scss
@@ -200,4 +200,11 @@ Styling for Contact
 
     }
 
+    #success-message,
+    #error-message {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
 }
