--- a/assets/css/components/_page.scss
+++ b/assets/css/components/_page.scss
@@ -25,7 +25,8 @@
     }
 
     .content {
-        padding: 3rem 0;
+        padding: 0;
+        padding-bottom: 4rem;
         background-color: $white;
     }
 
