--- a/assets/css/components/_search.scss
+++ b/assets/css/components/_search.scss
@@ -16,3 +16,18 @@
     display: none;
 
 }
+
+.search div.page.container-fluid>div.content {
+    padding-top: 0;
+}
+
+.search-summary {
+    padding-top: 1rem;
+    padding-bottom: 3rem;
+
+    p {
+        font-style: italic;
+        font-weight: 700;
+        font-size: 90%;
+    }
+}
