--- a/style.css
+++ b/style.css
@@ -2,6 +2,5 @@
  Theme Name: WordPressMD
  Author: Martin Dwyer
  Version: 1.0
- Description:  A theme originally built for the website goprimalstrength.com which is in the process
- of being developed for general distribution.
+ Description:  A flexible theme for building WordPress sites.
 */
